# quartz

./: .gitignore  CMakeLists.txt  README.md
assets/: antialiased_sphere_new.ppm  basic_sphere.ppm  depth_of_field_with_fov_20.ppm  directional_camera.ppm  directional_camera_fov_20.ppm  fov_120.ppm  fuzzy_metal.ppm  fuzzy_metal_parallel.ppm  hacky_lambertian_sphere.ppm  hacky_lambertian_sphere_w_gamma_correction.ppm  hollow_sphere.ppm  lambertian_sphere_with_hemispherical_diffusion.ppm  metal_and_lambertian_materials_test.ppm  ray_color.ppm  refraction_with_dielectric.ppm  refraction_with_dielectric_and_metal.ppm  refraction_with_dielectric_no_total_internal_refraction.ppm  refraction_with_dielectric_total_internal_refraction.ppm  test_render_parallel.ppm  true_lambertian_sphere_without_gamma_correction.ppm
include/quartz/: camera.h  color.h  common.h  dielectric.h  hittable.h  image.h  lambertian.h  material.h  metal.h  ray.h  render.h  scene.h  sphere.h  vec3.h
quartz/: main.cc
